# Templates

./: Desktop File.desktop  README.md  Script - Kotlin.kts  Script - Node.js.js  Script - Perl.pl  Script - TypeScript.tsx
Programming/CMake/C++17-SingleExecutable/: .editorconfig  .gitattributes  CMakeLists.txt
Programming/CMake/C++17-SingleLibrary/: .gitattributes  .gitignore  CMakeLists.txt
Programming/CMake/C++20-SingleExecutable/: CMakeLists.txt
Programming/CMake/C++20-SingleExecutable/cmake/: ProjectSettings.cmake
Programming/CMake/C++20-SingleExecutable/cmake/toolchain/: BuildType.cmake  VCPKGToolchain.cmake
Programming/CMake/C++20-SingleLibrary/cmake/compiler/: CompilerSettings.cmake
Programming/Gradle/Java11-JavaFX/: .gitattributes  .gitignore  build.gradle
Programming/Gradle/Java11-JavaFX/gradle/wrapper/: gradle-wrapper.properties
Programming/Gradle/Java11-JavaFX/src/main/java/com/github/artudi54/javafx11/: Main.java
Programming/Gradle/Java11-JavaFX/src/main/java/com/github/artudi54/javafx11/config/: ApplicationConfiguration.java  ApplicationConfigurationException.java
Programming/Gradle/Java11-JavaFX/src/main/java/com/github/artudi54/javafx11/config/cache/: WindowParameters.java
Programming/Gradle/Java11-JavaFX/src/main/java/com/github/artudi54/javafx11/controller/: MainController.java
Programming/Gradle/Java11-JavaFX/src/main/resources/: application.properties
Programming/Gradle/Java11-JavaFX/src/main/resources/fxml/: main.fxml
Programming/Gradle/JavaFX-11/: .gitignore  build.gradle  settings.gradle
Programming/Gradle/JavaFX-11/gradle/wrapper/: gradle-wrapper.properties
Programming/Gradle/JavaFX-11/src/main/java/com/github/artudi54/javafx11/: Main.java
Programming/Gradle/JavaFX-11/src/main/java/com/github/artudi54/javafx11/config/: ApplicationConfigurationException.java
Programming/Gradle/JavaFX-11/src/main/java/com/github/artudi54/javafx11/controller/: MainController.java
Programming/Gradle/JavaFX-11/src/main/resources/: application.properties
Programming/Gradle/JavaFX-11/src/main/resources/fxml/: main.fxml
Programming/Web/StaticWebsite/: .gitattributes  .gitignore  index.html
Project - C++ Executable/: CMakeLists.txt  vcpkg.json
Project - C++ Executable/cmake/compiler/: CompilerSettings.cmake
Project - C++ Executable/cmake/toolchain/: VCPKGToolchain.cmake
Project - C++ Library/: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
Project - C++ Library/src/: lib.cpp
Project - Java11 JavaFX/src/main/resources/: application.properties
